--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -14,6 +14,9 @@
     "config": "^3.3.8",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "passport": "^0.6.0"
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-naver": "^1.0.6",
+    "passport-naver-v2": "^2.0.8"
   }
 }
