--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -16,7 +16,6 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
-    "passport-naver": "^1.0.6",
-    "passport-naver-v2": "^2.0.8"
+    "passport-naver": "^1.0.6"
   }
 }
