--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
+    "passport-kakao": "^1.0.1",
     "passport-naver": "^1.0.6"
   }
 }
