Feat: Winston & Morgan연결

--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -25,6 +25,7 @@
     "passport-local": "^1.0.0",
     "passport-naver": "^1.0.6",
     "sequelize": "^6.25.3",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "winston": "^3.8.2"
   }
 }
