--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -28,5 +28,8 @@
     "sequelize-cli": "^6.5.2",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.27.0"
   }
 }
